# 2_2homework

./: CMakeLists.txt
homework1/: linklist.cpp  matrix.cpp  string_zip.cpp  student.cpp
homework2/: chat_tool.cpp  class_template.cpp  editable_string.cpp  function_template.cpp  rational.cpp  virtual_func.cpp
