cmake_minimum_required(VERSION 3.24)
project(2_2homework1)

set(CMAKE_CXX_STANDARD 17)

add_executable(2_2homework1 homework1/main.cpp)

add_executable(matrix homework1/matrix.cpp)
add_executable(string_zip homework1/string_zip.cpp)
add_executable(linklist homework1/linklist.cpp)
add_executable(student homework1/student.cpp)
add_executable(rational homework2/rational.cpp)
add_executable(virtual_func homework2/virtual_func.cpp)
add_executable(editable_string homework2/editable_string.cpp)
add_executable(function_template homework2/function_template.cpp)
add_executable(class_template homework2/class_template.cpp)
add_executable(chat_tool homework2/chat_tool.cpp)